typo in footnote

--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -171,11 +171,11 @@ next: MA_003.html
 <p>The commentary in T1547 says that equanimity refers to the meditator having stopped breathing and not desiring to pursue any more thoughts. It then says that purification of mindfulness refers to the purity of their mindfulness of eight subjects. These eight subjects aren’t stated there, but the same expression is used to refer to the eight liberations in a later chapter of T1547.</p>
 <p>There is also a discussion in T1547 that explains the essential quality of this fourth meditation: There are no more disturbances to its mindfulness. The first meditation was disturbed by noticing and investigating things, which is like a flame being disturbed. The second meditation was disturbed by joy, which is like a body of water being disturbed by waves produced by wind blowing on it. The third meditation was disturbed by breathing, which is like a wind blowing. This fourth stage of meditation doesn’t have any disturbances. This is why the <em>samādhi</em> achieved at this stage is called imperturbable.</p>
 <p>The <em>Dharmaskandha</em> reiterates the cognitive activity associated with wisdom and understanding that occurs in <em>samādhi</em>. It defines this fourth stage of meditation as consisting of four factors: neutral feeling, equanimity, mindfulness, and one-pointedness of mind. [cf. <a href="https://cbetaonline.dila.edu.tw/zh/T26n1537_p0484c17" target="_blank">T1537.26.484c17-485a25</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T28n1547_p0489b06" target="_blank">T1547.28.489b6-c22</a>] [<a href="#ref11">back</a>]</p></li>
-<li id="n12"><p><em>once the noble disciple’s contaminants have ended, their mind is liberated, and their wisdom is liberated. In the present life, they accomplish and dwell in their own knowledge, awakening, and realization</em>. C. <span class="ch">聖弟子諸漏已盡，心解脱、慧解脱。於現法中，自知、自覺自作證成就遊</span>, P. <em>bhikkhu āsavānaṁ khayā anāsavaṁ cetovimuttiṁ paññāvimuttiṁ diṭṭheva dhamme sayaṁ abhiññā sacchikatvā upasampajja viharati</em>, S. <em>āsravāṇāṃ kṣayād anāsravāṃ cetovimuktiṃ prajñāvimuktiṃ dṛṣṭa eva dharme svayam abhijñāya sākṣīkṛtvopasaṃpadya pravedayati kṣīṇā me jātir uṣitaṃ brahmacaryaṃ kṛtaṃ karaṇīyaṃ nāparam asmād bhavaṃ prajānāmi</em>.</p>
+<li id="n12"><p><em>once the noble disciple’s contaminants have ended, their mind is liberated, and their wisdom is liberated. In the present life, they accomplish and dwell in their own knowledge, awakening, and direct experience</em>. C. <span class="ch">聖弟子諸漏已盡，心解脱、慧解脱。於現法中，自知、自覺自作證成就遊</span>, P. <em>bhikkhu āsavānaṁ khayā anāsavaṁ cetovimuttiṁ paññāvimuttiṁ diṭṭheva dhamme sayaṁ abhiññā sacchikatvā upasampajja viharati</em>, S. <em>āsravāṇāṃ kṣayād anāsravāṃ cetovimuktiṃ prajñāvimuktiṃ dṛṣṭa eva dharme svayam abhijñāya sākṣīkṛtvopasaṃpadya pravedayati kṣīṇā me jātir uṣitaṃ brahmacaryaṃ kṛtaṃ karaṇīyaṃ nāparam asmād bhavaṃ prajānāmi</em>.</p>
 <p>This first half of the C. passage is nearly identical to the P. parallel found in other sources. In AN 7.69, it’s abbreviated, but the full P. passage can be found in other <em>sutta</em>s. Here, <span class="ch">諸漏已盡</span> = <em>āsavānaṁ khayā</em>, <span class="ch">心解脱、慧解脱</span> = <em>cetovimuttiṁ paññāvimuttiṁ</em>, <span class="ch">於現法中</span> = <em>diṭṭheva dhamme</em>, <span class="ch">自知</span> = <em>sayaṁ abhiññā</em>, <span class="ch">自作證</span> = <em>sacchikatvā</em>, and <span class="ch">成就遊</span> = <em>upasampajja viharati</em>. The only difference is the addition of the term <span class="ch">自覺</span>. P. <em>abhisambujjhati abhisameti</em> corresponds to <span class="ch">自知、自覺</span> in the parallel to SN 22.94. It’s possible that one of these synonyms was inserted into MĀ’s version of this often repeated description of a pracitioner realizing they are an <em>arhat</em>.</p>
 <p>The <cite>Dharmaskandha</cite> doesn’t cover this standard passage, but we do find some commentary for its primary terms offered in other Abhidharma texts. The ending of the contaminants (S. <em>āsrava</em>) is synonymous with becoming an <em>arhat</em> and being assured to no further rebirths in the future. This entire passage was the standardized way of describing this.</p>
 <p>There are three kinds of contaminants ended by an <em>arhat</em>: Those of desire, existence, and ignorance. The <cite>Saṅgītiparyāya</cite> (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0383a04" target="_blank">T1536.26.383a4</a>) defines these contaminants in this way: The contaminants of desire are the ties, bonds, fetters, tendencies, secondary afflictions, and hindrances that are tied to the desire realm, with the exception of ignorance. The contaminants of existence are the same set of detrimental things that are tied to the form and formless realms. Again, the exception is ignorance tied to those realms. The contaminant of ignorance is the lack of knowledge about the three realms. Taken together, these three types of contaminants represent the defiled mind.</p>
-<p>The <cite>Saṅgītiparyāya</cite> (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0376a02" target="_blank">T1536.26.376a2</a>) also offers us an interpretation of the two kinds of liberation. It says that one’s mind being liberated (心解脱) refers to the conviction (S. <em>adhimokṣa</em>) that’s associated with the good root of having no greed. One’s wisdom being liberated refers to the conviction that’s associated with the goot root of having no delusion. The <em>Mahāvibhāṣā</em> elaborates on this further: The good roots of having no greed and no delusion are the solutions for greed and delusion. Being freed from greed frees one’s mind, and being freed from delusion frees one’s wisdom (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0758a05" target="_blank">T1545.27.758a5</a>).</p>
+<p>The <cite>Saṅgītiparyāya</cite> (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0376a02" target="_blank">T1536.26.376a2</a>) also offers us an interpretation of the two kinds of liberation. It says that one’s mind being liberated (<span class="ch">心解脱</span>) refers to the conviction (S. <em>adhimokṣa</em>) that’s associated with the good root of having no greed. One’s wisdom being liberated refers to the conviction that’s associated with the goot root of having no delusion. The <em>Mahāvibhāṣā</em> elaborates on this further: The good roots of having no greed and no delusion are the solutions for greed and delusion. Being freed from greed frees one’s mind, and being freed from delusion frees one’s wisdom (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0758a05" target="_blank">T1545.27.758a5</a>).</p>
 <p><em>They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’</em> C. <span class="ch">『生已盡，梵行已立，所作已辦。不更受有，』知如眞。</span>, P. <em>‘Khīṇā jāti, vusitaṁ brahmacariyaṁ, kataṁ karaṇīyaṁ, nāparaṁ itthattāyā’ti pajānāti. </em>, S. <em>kṣīṇā me jātir uṣitaṃ brahmacaryaṃ kṛtaṃ karaṇīyaṃ nāparam asmād bhavaṃ prajānāmi</em>. This second half of the C. passage is found in P. sources in a nearly identical form, except for the ending. <span class="ch">生已盡</span> = <em>khīṇā jāti</em>, <span class="ch">梵行已立</span> = <em>vusitaṁ brahmacariyaṁ</em>, and <span class="ch">所作已辦</span> = <em>kṛtaṃ karaṇīyaṃ</em>. However, <span class="ch">不更受有</span> only approximates the meaning of <em>nāparaṁ itthattāyā</em>, which lit. means “no more being here.” Specifically, the last word <span class="ch">有</span> would mostly likely trans. <em>bhava</em> (“existence”).</p>
 <p>S. sources preserve at least a couple different conclusions to this passage: One reads <em>asmād bhavaṃ</em> (“my existence”) and another <em>ithyātvam</em> (“being here”). They also sometimes match our MĀ passage’s <span class="ch">知如眞</span> with <em>yathābhūtaṃ prajānāti</em>, where P. sources have a single verb like <em>pajānāti</em> or <em>abbhaññāsi</em>. We can see from this brief survey that the last two parts of the passage varied somewhat between textual traditions.</p>
 <p>In terms of the Sarvāstivāda interpretation of this passage, we can turn to a section of the <cite>Jñānaprasthāna</cite>. The text depicts a practitioner thinking this about ending birth, establishing the practice, and accomplishing the task: “This is the path; this is the practice. Based on this path and this practice, I have fully known suffering, forever ended its formation, realized its cessation, and cultivated the path.” This is clearly criticized as a form of arrogance in the commentary, but it shows the basic meaning that the passage implied to the author. [<a href="#ref12">back</a>]</p></li>
